--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "bank-management",
   "version": "0.0.0",
   "scripts": {
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "e2e": "ng e2e",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -28,8 +31,11 @@
     "@angular/cli": "^19.0.6",
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^22.10.6",
     "autoprefixer": "^10.4.20",
+    "cypress": "^13.17.0",
     "jasmine-core": "~5.4.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
